Reworked DSL and added new aggregating source.

--- a/src/test/resources/test.html
+++ b/src/test/resources/test.html
@@ -12,7 +12,8 @@
 </head>
 
 <body ng-controller="AppController">
-{{message}}
+
+<h1 class="message">{{message}}</h1>
 
 
 <!-- inject resources here based on class attribute -->
