Added version support for assets.

--- a/src/test/resources/index.html
+++ b/src/test/resources/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html ng-app="exampleApp">
+<html ng-app="app">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <!-- inject resources here based on class attribute -->
@@ -17,13 +17,14 @@
         <div ng-include src="'test1.html'"></div>
 
         <!-- inject resources here based on class attribute -->
-        <script class="app_scripts" src="angular.js"></script>
-        <script class="app_scripts" src="test.js"></script>
-        <script class="app_scripts" src="test2.js"></script>
+        <script class="app_scripts" src="js/angular.js"></script>
+        <script class="app_scripts" src="js/test.js"></script>
+        <script class="app_scripts" src="js/test2.js"></script>
         <!-- end injected resources -->
 
+
         <!-- inject resources here based on class attribute -->
-        <script class="templates_cache" src=""></script>
+        <script class="templates" src=""></script>
         <!-- end injected resources -->
 
         <span class="test"></span>
