Added basic Sass support.

--- a/src/test/resources/index.html
+++ b/src/test/resources/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <!-- inject resources here based on class attribute -->
         <link class="app_styles" rel="stylesheet" type="text/css" href="test.css">
+        <link class="app_sass_styles" rel="stylesheet" type="text/css" href="test.css"/>
 
         <title>
             Test
