Enhanced spriting to work with other processors.

--- a/src/test/resources/index.html
+++ b/src/test/resources/index.html
@@ -6,7 +6,7 @@
     <!-- inject resources here based on class attribute -->
     <link class="app_styles" rel="stylesheet" type="text/css" href="test.css">
     <link class="app_sass_styles" rel="stylesheet" type="text/css" href="test.css"/>
-    <link class="app_sprites" rel="stylesheet" type="text/css" href="icons/sprites.css"/>
+    <link class="app_css_sprites" rel="stylesheet" type="text/css" href="sprites.css"/>
     <title>
         Test
     </title>
